argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopnow-ingress
  namespace: shopnow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-user-service-user-service
                port:
                  number: 3001
          - path: /api/users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-user-service-user-service
                port:
                  number: 3001
          - path: /api/products(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-product-service-product-service
                port:
                  number: 3002
          - path: /api/orders(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-order-service-order-service
                port:
                  number: 3003
          - path: /api/payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-payment-service-payment-service
                port:
                  number: 3004
          - path: /api/notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-notification-service-notification-service
                port:
                  number: 3005
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: shopnow-frontend-frontend
                port:
                  number: 80
